<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <AutoCompleteTextView
    android:id="@+id/email"
    style="@style/Aptoide.TextView.Regular.S.Primary"
    android:layout_width="match_parent"
    android:layout_height="@dimen/login_field_height"
    android:background="?attr/loginInputBackground"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:hint="@string/login_email_field_text"
    android:imeOptions="actionDone"
    android:inputType="textEmailAddress"
    android:maxLength="@integer/max_username_char_length"
    android:maxLines="1"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/tip"
    style="@style/Aptoide.TextView.Regular.XXS.Grey"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="14dp"
    android:minHeight="14dp"
    android:text="@string/login_send_magic_link_body"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/email" />

  <TextView
    android:id="@+id/tip_error"
    style="@style/Aptoide.TextView.Regular.XXS.OrangeGradientEnd"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="14dp"
    android:drawableStart="@drawable/ic_error_outline_gradient_end"
    android:drawableLeft="@drawable/ic_error_outline_gradient_end"
    android:drawablePadding="8dp"
    android:drawableTint="@color/default_orange_gradient_end"
    android:minHeight="14dp"
    android:text="@string/login_error_invalid_email"
    android:visibility="gone"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/email"
    tools:visibility="visible" />

  <androidx.constraintlayout.widget.Barrier
    android:id="@+id/tip_barrier"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:barrierDirection="bottom"
    app:constraint_referenced_ids="tip,tip_error" />

  <Button
    android:id="@+id/send_magic_link_button"
    style="@style/Aptoide.Button.Install"
    android:layout_width="match_parent"
    android:layout_marginTop="20dp"
    android:text="@string/login_send_magic_link_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tip_barrier" />

  <TextView
    android:id="@+id/login_benefits_textview"
    style="@style/Aptoide.TextView.Medium.XS.BlackAlpha"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:drawableStart="@drawable/ic_shield"
    android:drawableLeft="@drawable/ic_shield"
    android:drawablePadding="5dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/send_magic_link_button"
    tools:text="Secure Login - No passwords saved on our side" />

</androidx.constraintlayout.widget.ConstraintLayout>
