<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <TextView
      android:id="@+id/hours"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/appview_countdown_rounded_corners_black_background"
      android:textColor="@color/white"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:text="24"
      style="@style/Aptoide.TextView.Medium.L"
      />

  <TextView
      android:id="@+id/hours_tag"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/poa_time_left_hours"
      android:textAllCaps="true"
      android:textColor="#949494"
      android:textSize="8sp"
      app:layout_constraintEnd_toEndOf="@id/hours"
      app:layout_constraintStart_toStartOf="@id/hours"
      app:layout_constraintTop_toBottomOf="@id/hours"
      style="@style/Aptoide.TextView.Medium"
      />

  <TextView
      android:id="@+id/first_colon"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="5dp"
      android:layout_marginStart="5dp"
      android:text=":"
      android:textColor="#494949"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@id/hours"
      app:layout_constraintStart_toEndOf="@id/hours"
      app:layout_constraintTop_toTopOf="@id/hours"
      style="@style/Aptoide.TextView.Medium"
      />

  <TextView
      android:id="@+id/minutes"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="5dp"
      android:layout_marginStart="5dp"
      android:background="@drawable/appview_countdown_rounded_corners_black_background"
      android:textColor="@color/white"
      app:layout_constraintStart_toEndOf="@id/first_colon"
      app:layout_constraintTop_toTopOf="parent"
      tools:text="24"
      style="@style/Aptoide.TextView.Medium.L"
      />

  <TextView
      android:id="@+id/minutes_tag"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/poa_time_left_minutes"
      android:textAllCaps="true"
      android:textColor="#949494"
      android:textSize="8sp"
      app:layout_constraintEnd_toEndOf="@id/minutes"
      app:layout_constraintStart_toStartOf="@id/minutes"
      app:layout_constraintTop_toBottomOf="@id/hours"
      style="@style/Aptoide.TextView.Medium"
      />


  <TextView
      android:id="@+id/second_colon"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="5dp"
      android:layout_marginStart="5dp"
      android:text=":"
      android:textColor="#494949"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@id/minutes"
      app:layout_constraintStart_toEndOf="@id/minutes"
      app:layout_constraintTop_toTopOf="@id/minutes"
      style="@style/Aptoide.TextView.Medium"
      />


  <TextView
      android:id="@+id/seconds"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="5dp"
      android:layout_marginStart="5dp"
      android:background="@drawable/appview_countdown_rounded_corners_black_background"
      android:textColor="@color/white"
      app:layout_constraintStart_toEndOf="@id/second_colon"
      app:layout_constraintTop_toTopOf="parent"
      tools:text="24"
      style="@style/Aptoide.TextView.Medium.L"
      />

  <TextView
      android:id="@+id/seconds_tag"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/poa_time_left_seconds"
      android:textAllCaps="true"
      android:textColor="#949494"
      android:textSize="8sp"
      app:layout_constraintEnd_toEndOf="@id/seconds"
      app:layout_constraintStart_toStartOf="@id/seconds"
      app:layout_constraintTop_toBottomOf="@id/hours"
      style="@style/Aptoide.TextView.Medium"
      />

</android.support.constraint.ConstraintLayout>