<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="horizontal"
    >

  <ImageView
      android:id="@+id/app_icon_imageview"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_gravity="center"
      android:layout_marginTop="1dp"
      android:adjustViewBounds="true"
      android:padding="4dp"
      tools:src="@drawable/orange_gradient"
      />

  <RelativeLayout
      android:id="@+id/card_info_install_layout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="visible"
      >

    <TextView
        android:id="@+id/app_title_textview"
        style="@style/Aptoide.TextView.Medium.S.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="94dp"
        android:layout_marginRight="94dp"
        android:lines="1"
        tools:text="@string/appc_title_settings_appcoins_wallet"
        />

    <android.widget.Button
        android:id="@+id/appview_install_button"
        style="@style/Aptoide.Button.Install.S"
        android:layout_width="83dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/install"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:visibility="visible"
        />
  </RelativeLayout>

  <LinearLayout
      android:id="@+id/appview_transfer_info"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal"
      android:visibility="gone"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >


      <FrameLayout
          android:layout_width="fill_parent"
          android:layout_height="4dp"
          android:layout_marginBottom="4dp"
          >

        <ProgressBar
            android:id="@+id/appview_download_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="4dp"
            android:indeterminate="false"
            />
      </FrameLayout>

      <RelativeLayout
          android:id="@+id/appview_download_info_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="5dp"
          >

        <TextView
            android:id="@+id/appview_download_download_state"
            style="@style/Aptoide.TextView.Medium.XS.Grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/appview_short_downloading"
            />

        <TextView
            android:id="@+id/appview_download_progress_number"
            style="@style/Aptoide.TextView.Medium.XS.Grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="start"
            tools:text="80%"
            />
      </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/install_controls_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_weight="4"
        android:gravity="end"
        android:orientation="horizontal"
        >

      <ImageView
          android:id="@+id/appview_download_cancel_button"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:layout_gravity="center"
          android:contentDescription="@null"
          android:padding="12dp"
          android:scaleType="center"
          android:src="?attr/download_progress_cancel"
          android:visibility="gone"
          />

      <ImageView
          android:id="@+id/appview_download_resume_download"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:layout_gravity="center"
          android:contentDescription="@null"
          android:padding="12dp"
          android:scaleType="fitCenter"
          android:src="?attr/download_progress_resume"
          android:visibility="gone"
          />

      <ImageView
          android:id="@+id/appview_download_pause_download"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:layout_gravity="center"
          android:contentDescription="@null"
          android:padding="12dp"
          android:scaleType="fitCenter"
          android:src="?attr/download_progress_pause"
          />

    </LinearLayout>

  </LinearLayout>
</LinearLayout>